<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carlfolkesson.medicinehandler.AddNewMedicineActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_name_medicine"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textAutoCorrect|textShortMessage"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintLeft_toLeftOf="@+id/name"
        app:layout_constraintRight_toRightOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="14dp"
        android:text="@string/new_stock_medicine"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/nameInput"
        app:layout_constraintRight_toRightOf="@+id/nameInput"
        app:layout_constraintTop_toBottomOf="@+id/nameInput"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/stockInput"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/hint_number"
        android:inputType="number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/stock"
        app:layout_constraintRight_toRightOf="@+id/stock"
        app:layout_constraintTop_toBottomOf="@+id/stock" />

    <Button
        android:id="@+id/addMedicineButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add_new_medicine_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="9dp"
        android:text="@string/cancel_new_medicine_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/addMedicineButton"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintBottom_creator="1" />

    <TextView
        android:id="@+id/dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="14dp"
        android:text="@string/new_dose_medicine"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintLeft_toLeftOf="@+id/stockInput"
        app:layout_constraintRight_toRightOf="@+id/stockInput"
        app:layout_constraintTop_toBottomOf="@+id/stockInput"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/doseInput"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hint_number"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="@+id/dose"
        app:layout_constraintRight_toRightOf="@+id/dose"
        app:layout_constraintTop_toBottomOf="@+id/dose"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/pillsTextDose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/pills"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toRightOf="@+id/doseInput"
        app:layout_constraintTop_toTopOf="@+id/doseInput" />

    <TextView
        android:id="@+id/pillsTextStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/pills"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toRightOf="@+id/stockInput"
        app:layout_constraintTop_toTopOf="@+id/stockInput" />
</android.support.constraint.ConstraintLayout>
